--- a/src/chat.html
+++ b/src/chat.html
@@ -9,27 +9,32 @@
 <body>
     <div class="container">
         <header>
-            <div class="title">Chat System</div>
+            <a href="index.html" id="s">Home</a>
+            <a href="login.html" id="s">Login</a>
+            <a href="chat.html" id="s">Chat</a>
             <div class="header-right">
-
             </div>
         </header>
-        <div class="sidebar">
-            <div class="sidebar-item"></div>
-            <div class="sidebar-item"></div>
-            <div class="sidebar-item"></div>
-            <div class="sidebar-item"></div>
-            <div class="sidebar-item"></div>
-            <div class="sidebar-item"></div>
-            <div class="sidebar-item"></div>
-        </div>
+
+        <input id="menu__toggle" type="checkbox" />
+        <label class="menu__btn" for="menu__toggle">
+            <span></span>
+        </label>
+        <ul class="menu__box">
+            <li><a class="menu__item" href="#">Richard</a></li>
+            <li><a class="menu__item" href="#">Nina</a></li>
+            <li><a class="menu__item" href="#">Anna</a></li>
+            <li><a class="menu__item" href="#">Sam</a></li>
+            <li><a class="menu__item" href="#">Mubi</a></li>
+        </ul>
+
         <div class="chat-window">
-            <div class="chat-header">Sam</div>
+            <div class="chat-header">Sam #naam</div>
             <div class="chat-content">
                 <div class="chat-bubble"></div>
+                <div class="chat-bubble2"></div>
                 <div class="chat-bubble"></div>
-                <div class="chat-bubble"></div>
-                <div class="chat-bubble"></div>
+                <div class="chat-bubble2"></div>
             </div>
             <div class="chat-input">
                 <input type="text" placeholder="Chat">
@@ -37,5 +42,8 @@
             </div>
         </div>
     </div>
+
+    <script src="js/chat.js">
+    </script>
 </body>
 </html>
