--- a/src/index.html
+++ b/src/index.html
@@ -14,13 +14,13 @@
     <header>
         <div class="headerContent">
             <div class="logoBox">
-                <img src="images/logo.svg" alt="logoKantoorCompleet" class="logo">
+                <img src="images/logo.svg" alt="logoKantoorCompleet" class="logo" onclick="location.href='index.html'">
                 <p class="logoTekst">Kantoor Compleet</p>
             </div>
 
             <nav class="headerNav">
                 <button id="chatbtn" onclick="location.href='chat.html'"><img src="images/icons/chatIcon.svg" alt="icon" class="navIcon">Berichten</button>
-                <button id="plaatsaddbtn" onclick="location.href='plaatsadvertentie.html'"><img src="images/logoSmall.svg" alt="icon" class="navIcon">plaats Advertentie</button>
+                <button id="plaatsaddbtn" onclick="location.href='plaatsadvertentie.html'"><img src="images/logoSmall.svg" alt="icon" class="navIcon">Nieuwe advertentie</button>
                 <div class="user_acc">
                     <div class="usericonbox"><img src="images/icons/personIcon.svg" class="personIcon"></div>
                     <div class="usermenubox">
