--- a/src/registreren.html
+++ b/src/registreren.html
@@ -31,7 +31,7 @@
         
         <div class="form-field">
             <label for="Wachtwoord">Wachtwoord:</label>
-            <input type="Wachtwoord" id="Wachtwoord" name="Wachtwoord" placeholder="Voer je wachtwoord in" required>
+            <input type="password" id="Wachtwoord" name="Wachtwoord" placeholder="Voer je wachtwoord in" required>
             <a href="login.html">login</a>
         </div>
 
