upload advertentie responsief

--- a/src/plaatsadvertentie.html
+++ b/src/plaatsadvertentie.html
@@ -57,85 +57,65 @@
                 </div>
             </div>
 
-            <!-- <div class="inputform">
+            <div class="inputform">
 
                 <div class="inputbox">
+                    <span class="verplicht">(verplicht)</span>
                     <label for="naam">Naam:</label>
+                    
                     <input type="text" id="naam">
                 </div>
-                <div class="inputbox">
+                <div class="inputbox categorieënInput">
+                    <span class="verplicht">(verplicht)</span>
                     <div class="TopOfBox">
-                        <label>Categorieën</label><img src="images/icons/arrow.svg" alt="icon" class="arrowIcon" onclick="bekijkCategorien()">
+                        <label>Categorieën<img src="images/icons/arrow.svg" alt="icon" class="arrowIcon" onclick="bekijkCategorien()"></label>
                         <hr>
+                        <div class="selectedCategorieën"></div>
                     </div>
                     <div class="categoriënbox">
-                        <div>stoelen</div>
-                        <div>tafels</div>
-                        <div>computers</div>
-                        <div>stoelen</div>
-                        <div>tafels</div>
-                        <div>computers</div>
-                        <div>stoelen</div>
-                        <div>tafels</div>
-                        <div>computers</div>
-                        <div>stoelen</div>
-                        <div>tafels</div>
-                        <div>computers</div>
-                        <div>stoelen</div>
-                        <div>tafels</div>
-                        <div>computers</div>
-                        <div>stoelen</div>
-                        <div>tafels</div>
-                        <div>computers</div>
-                        <div>stoelen</div>
-                        <div>tafels</div>
-                        <div>computers</div>
-                        <div>stoelen</div>
-                        <div>tafels</div>
-                        <div>computers</div>
-                        <div>stoelen</div>
-                        <div>tafels</div>
-                        <div>computers</div>
-                        <div>stoelen</div>
-                        <div>tafels</div>
-                        <div>computers</div>
-                        <div>stoelen</div>
-                        <div>tafels</div>
-                        <div>computers</div>
-                        <div>stoelen</div>
-                        <div>tafels</div>
-                        <div>computers</div>
-                        <div>stoelen</div>
-                        <div>tafels</div>
-                        <div>computers</div>
-                        <div>stoelen</div>
-                        <div>tafels</div>
-                        <div>computers</div>
-                        <div>stoelen</div>
-                        <div>tafels</div>
-                        <div>computers</div>
+                        <div>Meubilair</div>
+                        <div>Computers en Randapparatuur</div>
+                        <div>Printers en Scanners</div>
+                        <div>Telefoon- en Communicatiesystemen</div>
+                        <div>Koffiemachines</div>
+                        <div>Archiefkasten</div>
+                        <div>Vergadertafels en Stoelen</div>
+                        <div>Projectoren en Presentatieschermen</div>
+                        <div>Veiligheidsapparatuur</div>
+                        <div>Decoratie en Kunst</div>
+                        <div>Opbergrekken en Ladekasten</div>
+                        <div>Keukenapparatuur</div>
+                        <div>Stoelen en Bureaustoelen</div>
+                        <div>Reinigingsapparatuur</div>
+                        <div>Verlichting</div>
+                        <div>Werkplekaccessoires</div>
                     </div>
                 </div>
-                <div class="inputbox">
+                <div class="inputbox prijsbox">
+                    <span class="verplicht">(verplicht)</span>
                     <label for="prijs">Prijs:</label>
-                    <input type="text" id="prijs"><br>
-                    <label for="bieden">bieden vanaf:</label>
-                    <input type="text" id="bieden">
-                </div>
-                <div class="inputbox">
-                    <label>Bieden:</label>
-                    <input type="text">
+                    <div>
+                        <input type="text" id="prijs" placeholder="0,00">
+                        <span>€</span>
+                    </div>
+                    <label for="bieden">Bieden vanaf:</label>
+                    <div>
+                        <input type="text" id="bieden" placeholder="0,00">
+                        <span>€</span>
+                    </div>
+                    
                 </div>
                 <div class="inputbox">
                     <label for="timeForDeletion">Automatische verwijdering:</label>
-                    <input type="date" id="timeForDeletion"><br>
+                    <input type="date" id="timeForDeletion">
                 </div>
-                <div class="inputbox">
-                    <label for="beschrijfing">Beschrijfing:</label><br>
-                    <textarea name="beschrijfing" placeholder="type hier uw beschrijfing" id="beschrijfing"></textarea>
+                <div class="inputbox beschrijfingsbox">
+                    <span class="verplicht">(verplicht)</span>
+                    <label for="beschrijfing">Beschrijfing:</label>
+                    <textarea name="beschrijfing" placeholder="Een korte beschrijfing over het product" id="beschrijfing"></textarea>
                 </div>
                 <button type="submit">Plaats advertentie</button>
-            </div> -->
+            </div>
 
         </div>
     </main>
