--- a/src/chat.html
+++ b/src/chat.html
@@ -5,45 +5,62 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat System</title>
     <link rel="stylesheet" href="css/chat.css">
+    <link rel="icon" href="images/logoSmall.svg" type="image/icon type">
+    <link rel="stylesheet" href="css/advertentie.css">
+    <link rel="stylesheet" href="css/header.css">
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
-    <div class="container">
-        <header>
-            <a href="index.html" id="s">Home</a>
-            <a href="login.html" id="s">Login</a>
-            <a href="chat.html" id="s">Chat</a>
-            <div class="header-right">
-            </div>
-        </header>
-
-        <input id="menu__toggle" type="checkbox" />
-        <label class="menu__btn" for="menu__toggle">
-            <span></span>
-        </label>
-        <ul class="menu__box">
-            <li><a class="menu__item" href="#">Richard</a></li>
-            <li><a class="menu__item" href="#">Nina</a></li>
-            <li><a class="menu__item" href="#">Anna</a></li>
-            <li><a class="menu__item" href="#">Sam</a></li>
-            <li><a class="menu__item" href="#">Mubi</a></li>
-        </ul>
-
-        <div class="chat-window">
-            <div class="chat-header">Sam #naam</div>
-            <div class="chat-content">
-                <div class="chat-bubble"></div>
-                <div class="chat-bubble2"></div>
-                <div class="chat-bubble"></div>
-                <div class="chat-bubble2"></div>
-            </div>
-            <div class="chat-input">
-                <input type="text" placeholder="Chat">
-                <button class="button">send</button>
-            </div>
+<header>
+    <div class="headerContent">
+        <div class="logoBox">
+            <img src="images/logo.svg" alt="logoKantoorCompleet" class="logo">
+            <p class="logoTekst">Kantoor Compleet</p>
         </div>
+
+        <nav class="headerNav">
+            <a href="test_chat.html">
+                <button id="chatbtn" onclick="location.href='chat.html'"><img src="images/icons/chatIcon.svg" alt="icon" class="navIcon">Berichten</button></a>
+            <button id="plaatsaddbtn" onclick="location.href='plaatsadvertentie.html'"><img src="images/logoSmall.svg" alt="icon" class="navIcon">plaats Advertentie</button>
+            <div class="user_acc">
+                <div class="usericonbox"><img src="images/icons/personIcon.svg" class="personIcon"></div>
+                <div class="usermenubox">
+                    <ul class="listUserOptions">
+                        <li class="useroption">Profiel</li>
+                        <li class="useroption">Uitloggen</li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </div>
+</header>
+<input id="menu__toggle" type="checkbox" />
+<label class="menu__btn" for="menu__toggle">
+    <span></span>
+</label>
+<ul class="menu__box">
+    <li><a class="menu__item" href="#">Richard</a></li>
+    <li><a class="menu__item" href="#">Nina</a></li>
+    <li><a class="menu__item" href="#">Anna</a></li>
+    <li><a class="menu__item" href="#">Sam</a></li>
+    <li><a class="menu__item" href="#">Mubi</a></li>
+</ul>
+
+<div class="chat-window">
+    <div class="chat-header">Sam #naam</div>
+    <div class="chat-content">
+        <div id="chatBox"></div>
     </div>
 
-    <script src="js/chat.js">
-    </script>
+    <div class="chat-input">
+        <input type="text" id="message" placeholder="Enter your message">
+        <button id="send-btn" class="button">Send</button>
+    </div>
+</div>
+
+<script src="js/chat.js">
+
+</script>
 </body>
 </html>
