--- a/src/chat.html
+++ b/src/chat.html
@@ -8,8 +8,6 @@
     <link rel="icon" href="images/logoSmall.svg" type="image/icon type">
     <link rel="stylesheet" href="css/advertentie.css">
     <link rel="stylesheet" href="css/header.css">
-
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
 <header>
@@ -59,8 +57,6 @@
     </div>
 </div>
 
-<script src="js/chat.js">
-
-</script>
+<script src="js/chat.js"></script>
 </body>
 </html>
