--- a/src/advertentie.html
+++ b/src/advertentie.html
@@ -18,7 +18,7 @@
             </div>
 
             <nav class="headerNav">
-                <button id="chatbtn" onclick="location.href='chat.html'"><img src="images/icons/chatIcon.svg" alt="icon" class="navIcon">Berichten</button>
+                <button id="chatbtn" onclick="location.href='chat.php'"><img src="images/icons/chatIcon.svg" alt="icon" class="navIcon">Berichten</button>
                 <button id="plaatsaddbtn" onclick="location.href='plaatsadvertentie.html'"><img src="images/logoSmall.svg" alt="icon" class="navIcon">plaats Advertentie</button>
                 <div class="user_acc">
                     <div class="usericonbox"><img src="images/icons/personIcon.svg" class="personIcon"></div>
