--- a/src/chat.html
+++ b/src/chat.html
@@ -35,23 +35,26 @@
         </div>
     </header>
     <main>
-<input id="menu__toggle" type="checkbox" />
+<!-- <input id="menu__toggle" type="checkbox" /> -->
 <label class="menu__btn" for="menu__toggle">
     <span></span>
 </label>
-<ul class="menu__box">
-    <li><a class="menu__item" href="#">Richard</a></li>
-    <li><a class="menu__item" href="#">Nina</a></li>
-    <li><a class="menu__item" href="#">Anna</a></li>
-    <li><a class="menu__item" href="#">Sam</a></li>
-    <li><a class="menu__item" href="#">Mubi</a></li>
-</ul>
+<!-- <ul class="menu__box"> -->
+<!-- </ul> -->
 
 <div class="chat-window">
     <div class="chat-header">Sam #naam</div>
     <div class="chat-content">
         <div id="chatBox"></div>
+        <div class="chatUsers">
+            <li><a class="menu__item" href="#">Richard</a></li>
+            <li><a class="menu__item" href="#">Shaqwin amk</a></li>
+            <li><a class="menu__item" href="#">Anna</a></li>
+            <li><a class="menu__item" href="#">Sam</a></li>
+            <li><a class="menu__item" href="#">Mubi</a></li>
+        </div>
     </div>
+    
 
     <div class="chat-input">
         <input type="text" id="message" placeholder="Enter your message">
