Revert "Merge remote-tracking branch 'origin/main' into Sami"
This reverts commit 1c06df2b6caef522812b1a62fea5133eaaef4d75, reversing
changes made to bef43d1356ceb43d1963ec70a17c86748690754a.

--- a/src/login.html
+++ b/src/login.html
@@ -21,7 +21,7 @@
 
     <main class="mainPageContent">
         <div class="login-container">
-            <form class="login-form" id="inlogForm">
+            <form class="login-form" action="database verzoeken/login.php" method="POST">
                 <h1>Login</h1>
                 <div class="form-field">
                     <label for="Gebruikersnaam">Bedrijfsnaam:</label>
@@ -38,6 +38,6 @@
             </form>
         </div>
     </main>
-    <script src="js/login.js"></script>
+
 </body>
 </html>
